--- a/templates/addtaskcheck.html
+++ b/templates/addtaskcheck.html
@@ -149,12 +149,12 @@
       <button onclick="fetchAllData()">Fetch All</button>
 
       <h3>Slot Date</h3>
-
-      <label for="slotdate1">Enter minimum Slot Date: </label>
-      <input type="date" id="slotdate1" name="slotdate1" />
-      <label for="slotdate">Enter maximum Slot Date: </label>
+      <label for="slotdate">Enter minimumum Slot Date: </label>
       <input type="date" id="slotdate" name="slotdate" />
       <button onclick="fetchSlotDate()">Fetch Date</button>
+      <label for="slotdate1">Enter maximummum Slot Date: </label>
+      <input type="date" id="slotdate1" name="slotdate1" />
+      
 
       <h3>Add Task</h3>
       <form id="addTaskForm" method="POST">
