--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,10 +21,13 @@
           >Add Tasks</a
         >
         <a href="{{ url_for('add_task1') }}" class="btn btn-primary mx-2"
-        >Add Tasks Check and Book</a
-      >
+          >Add Tasks Check and Book</a
+        >
         <a href="{{ url_for('view_tasks') }}" class="btn btn-secondary mx-2"
           >View Tasks</a
+        >
+        <a href="{{ url_for('wallet_history') }}" class="btn btn-primary"
+          >View Wallet History</a
         >
       </div>
     </div>
