--- a/templates/superadmin_dashboard.html
+++ b/templates/superadmin_dashboard.html
@@ -6,6 +6,9 @@
   <body>
     <h1>Superadmin Dashboard</h1>
 
+    <!-- Link to user stats page -->
+    <p><a href="{{ url_for('user_stats') }}">Go to User Stats</a></p>
+
     <form method="POST">
       <label>Scheduling Time (HH:MM):</label>
       <input type="time" name="scheduling_time" required />
@@ -41,15 +44,16 @@
       </tbody>
     </table>
 
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
-    messages %}
-    <ul>
-      {% for category, message in messages %}
-      <li style="color: {{ 'green' if category == 'success' else 'red' }}">
-        {{ message }}
-      </li>
-      {% endfor %}
-    </ul>
-    {% endif %} {% endwith %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        <ul>
+          {% for category, message in messages %}
+            <li style="color: {{ 'green' if category == 'success' else 'red' }}">
+              {{ message }}
+            </li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
   </body>
 </html>
